plugins {
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

sourceCompatibility = '11'

ext {
    set('springBootVersion', "2.2.6.RELEASE")
//    set('springBootVersion', "2.1.6.RELEASE")
    set('springCloudVersion', "Hoxton.SR3")
//    set('springCloudVersion', "Greenwich.SR4")
}

dependencies {

    compileOnly 'org.springframework.boot:spring-boot'
    compileOnly 'org.springframework.boot:spring-boot-autoconfigure'
    compileOnly 'org.springframework.cloud:spring-cloud-commons'
    compileOnly 'org.springframework.cloud:spring-cloud-config-server'
    compileOnly 'org.springframework.cloud:spring-cloud-context'
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    implementation'org.springframework.cloud:spring-cloud-gateway-core'
    implementation'org.springframework.cloud:spring-cloud-loadbalancer'
    implementation 'com.github.docker-java:docker-java-transport-okhttp:3.2.1'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

test {
    useJUnitPlatform()
}
